Fix bug with overflow
An element was overflowing the body and the html element causing the
page to not take up the whole width of the screen on smaller screens,
because the viewport was scaled down to include the overflowing element.

--- a/style.css
+++ b/style.css
@@ -121,10 +121,15 @@ ul {
   src: url(./fonts/OpenSans-VariableFont_wdth\wght.ttf);
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "OpenSans", system-ui, "Segoe UI", Roboto, Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   position: relative;
+  overflow-x: hidden;
 }
 
 /* General */
